src/App.css
a {color: #9c0101;
text-decoration: none;
font-weight: bold;}

a:hover {
color: #610202;}

body {font-size: 18pt;}


::selection {background-color: #9c0101;
color: #e7d6d6;}
.App {
  text-align: center;
}

.alcremieGif {width: 20%;}

.builtBy {margin-top: 4%;}
.container {width: 100vw;}

.header {width: 100%;
  font-family: 'Press Start 2P', cursive;
  padding-top: 10px;
font-size: 40pt;
margin-bottom: 10px;
color: #ffffff; 
background-color: #e06464}



.card {
  margin-top: 50px;
min-height: 414px;
width: 18.4%;
margin-left:  50px;
margin-right: 50px;
border-radius: 5%;
}

footer p {font-size: 20px;}
.water { 
  background-image: url(./Water.png);}
.psychic {  background-image: url(./Psychic.png);}
.electric {  background-image: url(./Lightning.png);}
.grass {  background-image: url(./Grass.png);}
.ghost {  background-image: url(./Ghost.png);}
.poison {background-image: url(./Poison.png);}
  .ground {background-image: url(./Ground.png)}
.ice { background-image: url(./Ice.png);}
.fire {  background-image: url(./Fire.png);}
 .normal {background-image: url(./Normal.png);}
.rock { background-image: url(./Rock.png);}
.steel { background-image: url(./Steel.png);}
.fighting { background-image: url(./Fighting.png);}
.fairy {background-image: url(./Fairy.png);}
.dragon {background-image: url(./Dragon.png);}
.darkness {background-image: url(./Darkness.png);
color: #ffffff;}

.pokeName {text-transform: capitalize;
position: relative;
top: -10px;
font-size: 16pt;
}


.PokeSearch img {height: 40%;
  width: 83%;
  position: relative;
  right: -1.1px;
  top: -28px;
background-image: url(./background.jpg);
background-size: 170% 170%;}

.row {display: flex;
flex-direction: row;
justify-content: center;
width: 100%;}

.searchBar {height: 35px;
  width: 20%;
  font-size: 15pt;
margin-right: 2px;}

.submitButton {background-color: #9c0101;
  color: #e7d6d6;
border: 3px solid #4b0000;
width: 80px;
font-size: 15pt;
height: 40px;}


@media only screen and (max-width: 500px){

  .alcremieGif {width: 30%;}


  .PokeSearch img {height: 31%;
    top: -28px;
    width: 184px;
   }

  .card {min-width: 220px;
    background-size: 220px 80%;
    margin-left:  10px;
    margin-top: 40px;
    margin-right: 10px;
    min-height: 354px;
  background-repeat: no-repeat;}

  .header {
  font-size: 30pt;
  margin-bottom: 10px;
  color: #ffffff; 
  background-color: #e06464}

  .pokeName {white-space: nowrap;
    font-size: 14pt;
    }

    .searchBar {
      width: 50%;
      }

    
 }



@media only screen and (max-width: 1025px) and (min-width: 501px){
  .PokeSearch img {height: 40%;
    width: 255px;
   }

  .card {width: 294px;}
 }

